feat: configure application environment
