# src/main/java/api/jcloudify/app/endpoint/rest/controller/ApplicationEnvironmentController.java
@@ -6,6 +6,7 @@ import api.jcloudify.app.endpoint.rest.mapper.EnvironmentMapper;
 import api.jcloudify.app.endpoint.rest.model.CrupdateEnvironmentsRequestBody;
 import api.jcloudify.app.endpoint.rest.model.CrupdateEnvironmentsResponse;
 import api.jcloudify.app.endpoint.rest.model.EnvironmentsResponse;
+import api.jcloudify.app.endpoint.rest.model.OneOfPojaConf;
 import api.jcloudify.app.service.EnvironmentService;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -37,5 +38,14 @@ public class ApplicationEnvironmentController {
             .map(mapper::toRest)
             .toList();
     return new CrupdateEnvironmentsResponse().data(data);
+  }
+
+  @PutMapping("/users/{userId}/applications/{applicationId}/environments/{environmentId}/config")
+  public OneOfPojaConf configureApplicationEnv(
+      @PathVariable String userId,
+      @PathVariable String applicationId,
+      @PathVariable String environmentId,
+      @RequestBody OneOfPojaConf requestBody) {
+    return requestBody;
   }
 }
